verilog_vcd_parser/build/VCDParser.output
Terminals unused in grammar

    TOK_DOLLAR
    TOK_BINARY_NUMBER
    TOK_REAL_NUMBER


Grammar

    0 $accept: input "end of file"

    1 input: %empty
    2      | declaration_commands simulation_commands
    3      | simulation_commands
    4      | declaration_commands

    5 declaration_commands: declaration_command
    6                     | declaration_commands declaration_command

    7 simulation_commands: simulation_command
    8                    | simulation_commands simulation_command

    9 declaration_command: TOK_KW_COMMENT comment_text TOK_KW_END
   10                    | TOK_KW_DATE date_text TOK_KW_END
   11                    | TOK_KW_ENDDEFINITIONS TOK_KW_END
   12                    | TOK_KW_SCOPE scope_type TOK_IDENTIFIER TOK_KW_END
   13                    | TOK_KW_TIMESCALE TOK_TIME_NUMBER TOK_TIME_UNIT TOK_KW_END
   14                    | TOK_KW_UPSCOPE TOK_KW_END
   15                    | TOK_KW_VAR TOK_VAR_TYPE TOK_DECIMAL_NUM TOK_IDENTIFIER reference TOK_KW_END
   16                    | TOK_KW_VERSION version_text TOK_KW_END

   17 simulation_command: TOK_KW_DUMPALL value_changes TOK_KW_END
   18                   | TOK_KW_DUMPOFF value_changes TOK_KW_END
   19                   | TOK_KW_DUMPON value_changes TOK_KW_END
   20                   | TOK_KW_DUMPVARS value_changes TOK_KW_END
   21                   | TOK_KW_COMMENT value_changes TOK_KW_END
   22                   | simulation_time
   23                   | value_change

   24 scope_type: TOK_KW_BEGIN
   25           | TOK_KW_FORK
   26           | TOK_KW_FUNCTION
   27           | TOK_KW_MODULE
   28           | TOK_KW_TASK

   29 simulation_time: TOK_HASH TOK_DECIMAL_NUM

   30 value_changes: value_change
   31              | value_changes value_change

   32 value_change: scalar_value_change
   33             | vector_value_change

   34 scalar_value_change: TOK_VALUE TOK_IDENTIFIER

   35 vector_value_change: TOK_BIN_NUM TOK_IDENTIFIER
   36                    | TOK_REAL_NUM TOK_IDENTIFIER

   37 reference: TOK_IDENTIFIER
   38          | TOK_IDENTIFIER TOK_BRACKET_O TOK_DECIMAL_NUM TOK_BRACKET_C
   39          | TOK_IDENTIFIER TOK_BRACKET_O TOK_DECIMAL_NUM TOK_COLON TOK_DECIMAL_NUM TOK_BRACKET_C

   40 comment_text: %empty
   41             | TOK_COMMENT_TEXT

   42 version_text: %empty
   43             | TOK_VERSION_TEXT

   44 date_text: %empty
   45          | TOK_DATE_TEXT


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    TOK_BRACKET_O (258) 38 39
    TOK_BRACKET_C (259) 38 39
    TOK_COLON (260) 39
    TOK_DOLLAR (261)
    TOK_KW_END (262) 9 10 11 12 13 14 15 16 17 18 19 20 21
    TOK_KW_COMMENT (263) 9 21
    TOK_COMMENT_TEXT <std::string> (264) 41
    TOK_KW_DATE (265) 10
    TOK_DATE_TEXT <std::string> (266) 45
    TOK_KW_ENDDEFINITIONS (267) 11
    TOK_KW_SCOPE (268) 12
    TOK_KW_TIMESCALE (269) 13
    TOK_KW_UPSCOPE (270) 14
    TOK_KW_VAR (271) 15
    TOK_KW_VERSION (272) 16
    TOK_VERSION_TEXT <std::string> (273) 43
    TOK_KW_DUMPALL (274) 17
    TOK_KW_DUMPOFF (275) 18
    TOK_KW_DUMPON (276) 19
    TOK_KW_DUMPVARS (277) 20
    TOK_KW_BEGIN <VCDScopeType> (278) 24
    TOK_KW_FORK <VCDScopeType> (279) 25
    TOK_KW_FUNCTION <VCDScopeType> (280) 26
    TOK_KW_MODULE <VCDScopeType> (281) 27
    TOK_KW_TASK <VCDScopeType> (282) 28
    TOK_TIME_NUMBER <VCDTimeRes> (283) 13
    TOK_TIME_UNIT <VCDTimeUnit> (284) 13
    TOK_VAR_TYPE <VCDVarType> (285) 15
    TOK_HASH (286) 29
    TOK_VALUE <VCDBit> (287) 34
    TOK_BIN_NUM <std::string> (288) 35
    TOK_BINARY_NUMBER (289)
    TOK_REAL_NUM <std::string> (290) 36
    TOK_REAL_NUMBER (291)
    TOK_IDENTIFIER <std::string> (292) 12 15 34 35 36 37 38 39
    TOK_DECIMAL_NUM <int> (293) 15 29 38 39


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    input (40)
        on left: 1 2 3 4
        on right: 0
    declaration_commands (41)
        on left: 5 6
        on right: 2 4 6
    simulation_commands (42)
        on left: 7 8
        on right: 2 3 8
    declaration_command (43)
        on left: 9 10 11 12 13 14 15 16
        on right: 5 6
    simulation_command (44)
        on left: 17 18 19 20 21 22 23
        on right: 7 8
    scope_type <VCDScopeType> (45)
        on left: 24 25 26 27 28
        on right: 12
    simulation_time (46)
        on left: 29
        on right: 22
    value_changes (47)
        on left: 30 31
        on right: 17 18 19 20 21 31
    value_change (48)
        on left: 32 33
        on right: 23 30 31
    scalar_value_change (49)
        on left: 34
        on right: 32
    vector_value_change (50)
        on left: 35 36
        on right: 33
    reference <VCDSignal*> (51)
        on left: 37 38 39
        on right: 15
    comment_text <std::string> (52)
        on left: 40 41
        on right: 9
    version_text <std::string> (53)
        on left: 42 43
        on right: 16
    date_text <std::string> (54)
        on left: 44 45
        on right: 10


State 0

    0 $accept: . input "end of file"

    TOK_KW_COMMENT         shift, and go to state 1
    TOK_KW_DATE            shift, and go to state 2
    TOK_KW_ENDDEFINITIONS  shift, and go to state 3
    TOK_KW_SCOPE           shift, and go to state 4
    TOK_KW_TIMESCALE       shift, and go to state 5
    TOK_KW_UPSCOPE         shift, and go to state 6
    TOK_KW_VAR             shift, and go to state 7
    TOK_KW_VERSION         shift, and go to state 8
    TOK_KW_DUMPALL         shift, and go to state 9
    TOK_KW_DUMPOFF         shift, and go to state 10
    TOK_KW_DUMPON          shift, and go to state 11
    TOK_KW_DUMPVARS        shift, and go to state 12
    TOK_HASH               shift, and go to state 13
    TOK_VALUE              shift, and go to state 14
    TOK_BIN_NUM            shift, and go to state 15
    TOK_REAL_NUM           shift, and go to state 16

    $default  reduce using rule 1 (input)

    input                 go to state 17
    declaration_commands  go to state 18
    simulation_commands   go to state 19
    declaration_command   go to state 20
    simulation_command    go to state 21
    simulation_time       go to state 22
    value_change          go to state 23
    scalar_value_change   go to state 24
    vector_value_change   go to state 25


State 1

    9 declaration_command: TOK_KW_COMMENT . comment_text TOK_KW_END
   21 simulation_command: TOK_KW_COMMENT . value_changes TOK_KW_END

    TOK_COMMENT_TEXT  shift, and go to state 26
    TOK_VALUE         shift, and go to state 14
    TOK_BIN_NUM       shift, and go to state 15
    TOK_REAL_NUM      shift, and go to state 16

    $default  reduce using rule 40 (comment_text)

    value_changes        go to state 27
    value_change         go to state 28
    scalar_value_change  go to state 24
    vector_value_change  go to state 25
    comment_text         go to state 29


State 2

   10 declaration_command: TOK_KW_DATE . date_text TOK_KW_END

    TOK_DATE_TEXT  shift, and go to state 30

    $default  reduce using rule 44 (date_text)

    date_text  go to state 31


State 3

   11 declaration_command: TOK_KW_ENDDEFINITIONS . TOK_KW_END

    TOK_KW_END  shift, and go to state 32


State 4

   12 declaration_command: TOK_KW_SCOPE . scope_type TOK_IDENTIFIER TOK_KW_END

    TOK_KW_BEGIN     shift, and go to state 33
    TOK_KW_FORK      shift, and go to state 34
    TOK_KW_FUNCTION  shift, and go to state 35
    TOK_KW_MODULE    shift, and go to state 36
    TOK_KW_TASK      shift, and go to state 37

    scope_type  go to state 38


State 5

   13 declaration_command: TOK_KW_TIMESCALE . TOK_TIME_NUMBER TOK_TIME_UNIT TOK_KW_END

    TOK_TIME_NUMBER  shift, and go to state 39


State 6

   14 declaration_command: TOK_KW_UPSCOPE . TOK_KW_END

    TOK_KW_END  shift, and go to state 40


State 7

   15 declaration_command: TOK_KW_VAR . TOK_VAR_TYPE TOK_DECIMAL_NUM TOK_IDENTIFIER reference TOK_KW_END

    TOK_VAR_TYPE  shift, and go to state 41


State 8

   16 declaration_command: TOK_KW_VERSION . version_text TOK_KW_END

    TOK_VERSION_TEXT  shift, and go to state 42

    $default  reduce using rule 42 (version_text)

    version_text  go to state 43


State 9

   17 simulation_command: TOK_KW_DUMPALL . value_changes TOK_KW_END

    TOK_VALUE     shift, and go to state 14
    TOK_BIN_NUM   shift, and go to state 15
    TOK_REAL_NUM  shift, and go to state 16

    value_changes        go to state 44
    value_change         go to state 28
    scalar_value_change  go to state 24
    vector_value_change  go to state 25


State 10

   18 simulation_command: TOK_KW_DUMPOFF . value_changes TOK_KW_END

    TOK_VALUE     shift, and go to state 14
    TOK_BIN_NUM   shift, and go to state 15
    TOK_REAL_NUM  shift, and go to state 16

    value_changes        go to state 45
    value_change         go to state 28
    scalar_value_change  go to state 24
    vector_value_change  go to state 25


State 11

   19 simulation_command: TOK_KW_DUMPON . value_changes TOK_KW_END

    TOK_VALUE     shift, and go to state 14
    TOK_BIN_NUM   shift, and go to state 15
    TOK_REAL_NUM  shift, and go to state 16

    value_changes        go to state 46
    value_change         go to state 28
    scalar_value_change  go to state 24
    vector_value_change  go to state 25


State 12

   20 simulation_command: TOK_KW_DUMPVARS . value_changes TOK_KW_END

    TOK_VALUE     shift, and go to state 14
    TOK_BIN_NUM   shift, and go to state 15
    TOK_REAL_NUM  shift, and go to state 16

    value_changes        go to state 47
    value_change         go to state 28
    scalar_value_change  go to state 24
    vector_value_change  go to state 25


State 13

   29 simulation_time: TOK_HASH . TOK_DECIMAL_NUM

    TOK_DECIMAL_NUM  shift, and go to state 48


State 14

   34 scalar_value_change: TOK_VALUE . TOK_IDENTIFIER

    TOK_IDENTIFIER  shift, and go to state 49


State 15

   35 vector_value_change: TOK_BIN_NUM . TOK_IDENTIFIER

    TOK_IDENTIFIER  shift, and go to state 50


State 16

   36 vector_value_change: TOK_REAL_NUM . TOK_IDENTIFIER

    TOK_IDENTIFIER  shift, and go to state 51


State 17

    0 $accept: input . "end of file"

    "end of file"  shift, and go to state 52


State 18

    2 input: declaration_commands . simulation_commands
    4      | declaration_commands .
    6 declaration_commands: declaration_commands . declaration_command

    TOK_KW_COMMENT         shift, and go to state 1
    TOK_KW_DATE            shift, and go to state 2
    TOK_KW_ENDDEFINITIONS  shift, and go to state 3
    TOK_KW_SCOPE           shift, and go to state 4
    TOK_KW_TIMESCALE       shift, and go to state 5
    TOK_KW_UPSCOPE         shift, and go to state 6
    TOK_KW_VAR             shift, and go to state 7
    TOK_KW_VERSION         shift, and go to state 8
    TOK_KW_DUMPALL         shift, and go to state 9
    TOK_KW_DUMPOFF         shift, and go to state 10
    TOK_KW_DUMPON          shift, and go to state 11
    TOK_KW_DUMPVARS        shift, and go to state 12
    TOK_HASH               shift, and go to state 13
    TOK_VALUE              shift, and go to state 14
    TOK_BIN_NUM            shift, and go to state 15
    TOK_REAL_NUM           shift, and go to state 16

    $default  reduce using rule 4 (input)

    simulation_commands  go to state 53
    declaration_command  go to state 54
    simulation_command   go to state 21
    simulation_time      go to state 22
    value_change         go to state 23
    scalar_value_change  go to state 24
    vector_value_change  go to state 25


State 19

    3 input: simulation_commands .
    8 simulation_commands: simulation_commands . simulation_command

    TOK_KW_COMMENT   shift, and go to state 55
    TOK_KW_DUMPALL   shift, and go to state 9
    TOK_KW_DUMPOFF   shift, and go to state 10
    TOK_KW_DUMPON    shift, and go to state 11
    TOK_KW_DUMPVARS  shift, and go to state 12
    TOK_HASH         shift, and go to state 13
    TOK_VALUE        shift, and go to state 14
    TOK_BIN_NUM      shift, and go to state 15
    TOK_REAL_NUM     shift, and go to state 16

    $default  reduce using rule 3 (input)

    simulation_command   go to state 56
    simulation_time      go to state 22
    value_change         go to state 23
    scalar_value_change  go to state 24
    vector_value_change  go to state 25


State 20

    5 declaration_commands: declaration_command .

    $default  reduce using rule 5 (declaration_commands)


State 21

    7 simulation_commands: simulation_command .

    $default  reduce using rule 7 (simulation_commands)


State 22

   22 simulation_command: simulation_time .

    $default  reduce using rule 22 (simulation_command)


State 23

   23 simulation_command: value_change .

    $default  reduce using rule 23 (simulation_command)


State 24

   32 value_change: scalar_value_change .

    $default  reduce using rule 32 (value_change)


State 25

   33 value_change: vector_value_change .

    $default  reduce using rule 33 (value_change)


State 26

   41 comment_text: TOK_COMMENT_TEXT .

    $default  reduce using rule 41 (comment_text)


State 27

   21 simulation_command: TOK_KW_COMMENT value_changes . TOK_KW_END
   31 value_changes: value_changes . value_change

    TOK_KW_END    shift, and go to state 57
    TOK_VALUE     shift, and go to state 14
    TOK_BIN_NUM   shift, and go to state 15
    TOK_REAL_NUM  shift, and go to state 16

    value_change         go to state 58
    scalar_value_change  go to state 24
    vector_value_change  go to state 25


State 28

   30 value_changes: value_change .

    $default  reduce using rule 30 (value_changes)


State 29

    9 declaration_command: TOK_KW_COMMENT comment_text . TOK_KW_END

    TOK_KW_END  shift, and go to state 59


State 30

   45 date_text: TOK_DATE_TEXT .

    $default  reduce using rule 45 (date_text)


State 31

   10 declaration_command: TOK_KW_DATE date_text . TOK_KW_END

    TOK_KW_END  shift, and go to state 60


State 32

   11 declaration_command: TOK_KW_ENDDEFINITIONS TOK_KW_END .

    $default  reduce using rule 11 (declaration_command)


State 33

   24 scope_type: TOK_KW_BEGIN .

    $default  reduce using rule 24 (scope_type)


State 34

   25 scope_type: TOK_KW_FORK .

    $default  reduce using rule 25 (scope_type)


State 35

   26 scope_type: TOK_KW_FUNCTION .

    $default  reduce using rule 26 (scope_type)


State 36

   27 scope_type: TOK_KW_MODULE .

    $default  reduce using rule 27 (scope_type)


State 37

   28 scope_type: TOK_KW_TASK .

    $default  reduce using rule 28 (scope_type)


State 38

   12 declaration_command: TOK_KW_SCOPE scope_type . TOK_IDENTIFIER TOK_KW_END

    TOK_IDENTIFIER  shift, and go to state 61


State 39

   13 declaration_command: TOK_KW_TIMESCALE TOK_TIME_NUMBER . TOK_TIME_UNIT TOK_KW_END

    TOK_TIME_UNIT  shift, and go to state 62


State 40

   14 declaration_command: TOK_KW_UPSCOPE TOK_KW_END .

    $default  reduce using rule 14 (declaration_command)


State 41

   15 declaration_command: TOK_KW_VAR TOK_VAR_TYPE . TOK_DECIMAL_NUM TOK_IDENTIFIER reference TOK_KW_END

    TOK_DECIMAL_NUM  shift, and go to state 63


State 42

   43 version_text: TOK_VERSION_TEXT .

    $default  reduce using rule 43 (version_text)


State 43

   16 declaration_command: TOK_KW_VERSION version_text . TOK_KW_END

    TOK_KW_END  shift, and go to state 64


State 44

   17 simulation_command: TOK_KW_DUMPALL value_changes . TOK_KW_END
   31 value_changes: value_changes . value_change

    TOK_KW_END    shift, and go to state 65
    TOK_VALUE     shift, and go to state 14
    TOK_BIN_NUM   shift, and go to state 15
    TOK_REAL_NUM  shift, and go to state 16

    value_change         go to state 58
    scalar_value_change  go to state 24
    vector_value_change  go to state 25


State 45

   18 simulation_command: TOK_KW_DUMPOFF value_changes . TOK_KW_END
   31 value_changes: value_changes . value_change

    TOK_KW_END    shift, and go to state 66
    TOK_VALUE     shift, and go to state 14
    TOK_BIN_NUM   shift, and go to state 15
    TOK_REAL_NUM  shift, and go to state 16

    value_change         go to state 58
    scalar_value_change  go to state 24
    vector_value_change  go to state 25


State 46

   19 simulation_command: TOK_KW_DUMPON value_changes . TOK_KW_END
   31 value_changes: value_changes . value_change

    TOK_KW_END    shift, and go to state 67
    TOK_VALUE     shift, and go to state 14
    TOK_BIN_NUM   shift, and go to state 15
    TOK_REAL_NUM  shift, and go to state 16

    value_change         go to state 58
    scalar_value_change  go to state 24
    vector_value_change  go to state 25


State 47

   20 simulation_command: TOK_KW_DUMPVARS value_changes . TOK_KW_END
   31 value_changes: value_changes . value_change

    TOK_KW_END    shift, and go to state 68
    TOK_VALUE     shift, and go to state 14
    TOK_BIN_NUM   shift, and go to state 15
    TOK_REAL_NUM  shift, and go to state 16

    value_change         go to state 58
    scalar_value_change  go to state 24
    vector_value_change  go to state 25


State 48

   29 simulation_time: TOK_HASH TOK_DECIMAL_NUM .

    $default  reduce using rule 29 (simulation_time)


State 49

   34 scalar_value_change: TOK_VALUE TOK_IDENTIFIER .

    $default  reduce using rule 34 (scalar_value_change)


State 50

   35 vector_value_change: TOK_BIN_NUM TOK_IDENTIFIER .

    $default  reduce using rule 35 (vector_value_change)


State 51

   36 vector_value_change: TOK_REAL_NUM TOK_IDENTIFIER .

    $default  reduce using rule 36 (vector_value_change)


State 52

    0 $accept: input "end of file" .

    $default  accept


State 53

    2 input: declaration_commands simulation_commands .
    8 simulation_commands: simulation_commands . simulation_command

    TOK_KW_COMMENT   shift, and go to state 55
    TOK_KW_DUMPALL   shift, and go to state 9
    TOK_KW_DUMPOFF   shift, and go to state 10
    TOK_KW_DUMPON    shift, and go to state 11
    TOK_KW_DUMPVARS  shift, and go to state 12
    TOK_HASH         shift, and go to state 13
    TOK_VALUE        shift, and go to state 14
    TOK_BIN_NUM      shift, and go to state 15
    TOK_REAL_NUM     shift, and go to state 16

    $default  reduce using rule 2 (input)

    simulation_command   go to state 56
    simulation_time      go to state 22
    value_change         go to state 23
    scalar_value_change  go to state 24
    vector_value_change  go to state 25


State 54

    6 declaration_commands: declaration_commands declaration_command .

    $default  reduce using rule 6 (declaration_commands)


State 55

   21 simulation_command: TOK_KW_COMMENT . value_changes TOK_KW_END

    TOK_VALUE     shift, and go to state 14
    TOK_BIN_NUM   shift, and go to state 15
    TOK_REAL_NUM  shift, and go to state 16

    value_changes        go to state 27
    value_change         go to state 28
    scalar_value_change  go to state 24
    vector_value_change  go to state 25


State 56

    8 simulation_commands: simulation_commands simulation_command .

    $default  reduce using rule 8 (simulation_commands)


State 57

   21 simulation_command: TOK_KW_COMMENT value_changes TOK_KW_END .

    $default  reduce using rule 21 (simulation_command)


State 58

   31 value_changes: value_changes value_change .

    $default  reduce using rule 31 (value_changes)


State 59

    9 declaration_command: TOK_KW_COMMENT comment_text TOK_KW_END .

    $default  reduce using rule 9 (declaration_command)


State 60

   10 declaration_command: TOK_KW_DATE date_text TOK_KW_END .

    $default  reduce using rule 10 (declaration_command)


State 61

   12 declaration_command: TOK_KW_SCOPE scope_type TOK_IDENTIFIER . TOK_KW_END

    TOK_KW_END  shift, and go to state 69


State 62

   13 declaration_command: TOK_KW_TIMESCALE TOK_TIME_NUMBER TOK_TIME_UNIT . TOK_KW_END

    TOK_KW_END  shift, and go to state 70


State 63

   15 declaration_command: TOK_KW_VAR TOK_VAR_TYPE TOK_DECIMAL_NUM . TOK_IDENTIFIER reference TOK_KW_END

    TOK_IDENTIFIER  shift, and go to state 71


State 64

   16 declaration_command: TOK_KW_VERSION version_text TOK_KW_END .

    $default  reduce using rule 16 (declaration_command)


State 65

   17 simulation_command: TOK_KW_DUMPALL value_changes TOK_KW_END .

    $default  reduce using rule 17 (simulation_command)


State 66

   18 simulation_command: TOK_KW_DUMPOFF value_changes TOK_KW_END .

    $default  reduce using rule 18 (simulation_command)


State 67

   19 simulation_command: TOK_KW_DUMPON value_changes TOK_KW_END .

    $default  reduce using rule 19 (simulation_command)


State 68

   20 simulation_command: TOK_KW_DUMPVARS value_changes TOK_KW_END .

    $default  reduce using rule 20 (simulation_command)


State 69

   12 declaration_command: TOK_KW_SCOPE scope_type TOK_IDENTIFIER TOK_KW_END .

    $default  reduce using rule 12 (declaration_command)


State 70

   13 declaration_command: TOK_KW_TIMESCALE TOK_TIME_NUMBER TOK_TIME_UNIT TOK_KW_END .

    $default  reduce using rule 13 (declaration_command)


State 71

   15 declaration_command: TOK_KW_VAR TOK_VAR_TYPE TOK_DECIMAL_NUM TOK_IDENTIFIER . reference TOK_KW_END

    TOK_IDENTIFIER  shift, and go to state 72

    reference  go to state 73


State 72

   37 reference: TOK_IDENTIFIER .
   38          | TOK_IDENTIFIER . TOK_BRACKET_O TOK_DECIMAL_NUM TOK_BRACKET_C
   39          | TOK_IDENTIFIER . TOK_BRACKET_O TOK_DECIMAL_NUM TOK_COLON TOK_DECIMAL_NUM TOK_BRACKET_C

    TOK_BRACKET_O  shift, and go to state 74

    $default  reduce using rule 37 (reference)


State 73

   15 declaration_command: TOK_KW_VAR TOK_VAR_TYPE TOK_DECIMAL_NUM TOK_IDENTIFIER reference . TOK_KW_END

    TOK_KW_END  shift, and go to state 75


State 74

   38 reference: TOK_IDENTIFIER TOK_BRACKET_O . TOK_DECIMAL_NUM TOK_BRACKET_C
   39          | TOK_IDENTIFIER TOK_BRACKET_O . TOK_DECIMAL_NUM TOK_COLON TOK_DECIMAL_NUM TOK_BRACKET_C

    TOK_DECIMAL_NUM  shift, and go to state 76


State 75

   15 declaration_command: TOK_KW_VAR TOK_VAR_TYPE TOK_DECIMAL_NUM TOK_IDENTIFIER reference TOK_KW_END .

    $default  reduce using rule 15 (declaration_command)


State 76

   38 reference: TOK_IDENTIFIER TOK_BRACKET_O TOK_DECIMAL_NUM . TOK_BRACKET_C
   39          | TOK_IDENTIFIER TOK_BRACKET_O TOK_DECIMAL_NUM . TOK_COLON TOK_DECIMAL_NUM TOK_BRACKET_C

    TOK_BRACKET_C  shift, and go to state 77
    TOK_COLON      shift, and go to state 78


State 77

   38 reference: TOK_IDENTIFIER TOK_BRACKET_O TOK_DECIMAL_NUM TOK_BRACKET_C .

    $default  reduce using rule 38 (reference)


State 78

   39 reference: TOK_IDENTIFIER TOK_BRACKET_O TOK_DECIMAL_NUM TOK_COLON . TOK_DECIMAL_NUM TOK_BRACKET_C

    TOK_DECIMAL_NUM  shift, and go to state 79


State 79

   39 reference: TOK_IDENTIFIER TOK_BRACKET_O TOK_DECIMAL_NUM TOK_COLON TOK_DECIMAL_NUM . TOK_BRACKET_C

    TOK_BRACKET_C  shift, and go to state 80


State 80

   39 reference: TOK_IDENTIFIER TOK_BRACKET_O TOK_DECIMAL_NUM TOK_COLON TOK_DECIMAL_NUM TOK_BRACKET_C .

    $default  reduce using rule 39 (reference)
